--- a/templates/bundle/Dockerfile
+++ b/templates/bundle/Dockerfile
@@ -15,6 +15,7 @@ ARG LABEL_LIFERAY_TOMCAT_VERSION
 ARG LABEL_LIFERAY_VCS_REF
 ARG LABEL_NAME
 ARG LABEL_RELEASE_VERSION
+ARG LABEL_SLIM
 ARG LABEL_VCS_REF
 ARG LABEL_VCS_URL
 ARG LABEL_VERSION
@@ -49,6 +50,7 @@ ENV LIFERAY_JVM_OPTS=
 ENV LIFERAY_PID="${LIFERAY_HOME}/liferay.pid"
 ENV LIFERAY_PRODUCT_NAME="${LABEL_NAME}"
 ENV LIFERAY_RELEASE_VERSION="${LABEL_RELEASE_VERSION}"
+ENV LIFERAY_SLIM="${LABEL_SLIM}"
 ENV LIFERAY_THREAD_DUMPS_DIRECTORY="${LIFERAY_HOME}/data/sre/thread_dumps"
 
 ENV LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_DOCUMENT_PERIOD_LIBRARY_PERIOD_PREVIEW_PERIOD_AUDIO_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASED__UPPERCASEL__UPPERCASEA_UDIO_UPPERCASEF__UPPERCASEF__UPPERCASEM__UPPERCASEP__UPPERCASEE__UPPERCASEG__UPPERCASEA_UDIO_UPPERCASEC_ONVERTER_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLED='"true"'
